misc fixes & reaction div align styling

--- a/webpage/style.css
+++ b/webpage/style.css
@@ -1804,7 +1804,8 @@ img.svgtheme,
 }
 
 .reactiondiv {
-	margin-left: .5in;
+	margin-top: 3px;
+	margin-left: 54px;
 }
 
 .reactionCount {
